# transaction-processor

./: Cargo.toml  LICENSE  README.md
src/: client_repo.rs  consumer.rs  error.rs  main.rs  processor.rs  transaction_feed.rs  writer.rs
src/models/: accounts.rs  client.rs  engine.rs  manager.rs  mod.rs  transaction.rs
test-data/: chargeback-and-lock.csv  dispute-withdrawal.csv  duplicate-tx.csv  insuf-available-funds-then-resolve.csv  records-over-limit.csv  spaces-test.csv  test-lock.csv
test-inputs/: chargeback-decimal-and-lock.csv  dep-with-good-plus-insuf-funds-and-neg.csv  dispute-wrong-client-and-invalid-tx.csv  duplicate-columns.csv  invalid-rows.csv  resolve-and-chargeback-undisputed-and-missing-tx.csv  resolve-withdrawal-and-doesnt-exist.csv  too-many-columns.csv  tx-and-client-out-of-order.csv  unrelated-data.csv
