[package]
name = "transaction-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
decimal = "2.1.0"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
env_logger = "0.9.1"
log = "0.4.17"