[package]
name = "transaction-processor"
version = "1.0.0"
edition = "2021"
authors = ["jdwlynch"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
env_logger = "0.9.1"
log = "0.4.17"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
